--- a/01 - Documentation/index.html
+++ b/01 - Documentation/index.html
@@ -26,7 +26,7 @@
   </head>
   <body>
     <header id="main-header">
-      <h2><strong>Shareen</strong> - Template Documentation</h2>
+      <h2><strong> Cade Keenan </strong> - Template Documentation</h2>
     </header>
     <aside id="aside-panel">
       <!--<h3>Table Of Content</h3>-->
