--- a/02 - HTML Files/pages-about-me-v1.html
+++ b/02 - HTML Files/pages-about-me-v1.html
@@ -209,7 +209,7 @@
                     <img src="http://placehold.it/370x400" alt="">
                   </div>
                   <div class="col-lg-8">
-                    <p>Lorem ipsum dolor amet swag typewriter meditation iceland air plant, direct trade tacos kale chips ugh. Fashion axe single-origin coffee organic edison bulb prism. Green juice sriracha kogi iceland. Single-origin coffee leggings gluten-free asymmetrical biodiesel.<br><br><strong>Hexagon neutra irony organic jean shorts pop-up fashion axe prism ethical four loko small batch meh plaid tumeric chia, enamel pin vegan.</strong><br><br>Bitters jianbing pok pok direct trade kombucha. Organic wolf after tacos four loko hoodie chambray. Forage master cleanse kogi vice salvia flannel deep v. Portland gentrify jean shorts, vaporware umami kale chips cray shoreditch freegan kickstarter selfies.</p>
+                    <p> Welcome all, my name is Cade Keenan. Currently, I am a 22 year old senior BAIS student at The University of Iowa in their internationally award winning Business Analytics and Information Systems program. Formerly a Division 1 Athlete at Butler University, I enjoy all things sports, music, science and nature. In my free time I enjoy spending time with family and friends, fishing, concert-going, and cooking.  </p>
                     <ul class="social-icons">
                       <li><a href="#"><i class="fa fa-facebook"></i></a></li>
                       <li><a href="#"><i class="fa fa-twitter"></i></a></li>
