--- a/02 - HTML Files/index.html
+++ b/02 - HTML Files/index.html
@@ -118,7 +118,7 @@
       <div class="container expanded">
         <div class="header-wrap">
           <div class="header-logo">
-            <a href="index.html"><img src="images/logo.png" alt=""></a>
+            <a href="index.html"><img src="images/CJKLogo.png" alt=""></a>
           </div>
           <div class="header-nav">
               <ul class="main-menu">
