--- a/02 - HTML Files/pages-about-me-v1.html
+++ b/02 - HTML Files/pages-about-me-v1.html
@@ -126,31 +126,14 @@
                   <ul class="sub-menu">
                     <li><a href="index.html">Standard Posts</a></li>
                     <li><a href="home-recent.html">Recent Posts</a></li>
-                    <li><a href="home-masonry.html">Masonry Posts</a></li>
-                    <li><a href="home-list.html">List Posts</a></li>
-                    <li><a href="home-full-width.html">Full Width Posts</a></li>
-                    <li><a href="home-without-sidebar.html">Without Sidebar</a></li>
                   </ul>
                 </li>
-                <li class="menu-item-has-children"><a href="#">Sliders</a>
-                  <ul class="sub-menu">
-                    <li><a href="slider-boxed.html">Boxed Slider</a></li>
-                    <li><a href="slider-full-width.html">Full Width Slider</a></li>
-                    <li><a href="slider-medium.html">Two Big Posts</a></li>
-                    <li><a href="slider-small.html">Three Big Posts</a></li>
-                    <li><a href="slider-infinity.html">Infinity Scroll</a></li>
-                  </ul>
-                </li>
+               
                 <li class="active"><a href="pages-about-me-v1.html">About</a></li>
                 <li class="menu-item-has-children"><a href="#">Pages</a>
                   <ul class="sub-menu">
-                    <li><a href="pages-left-sidebar.html">Left Sidebar</a></li>
-                    <li><a href="pages-right-sidebar.html">Right Sidebar</a></li>
-                    <li><a href="pages-without-sidebar.html">Without Sidebar</a></li>
                     <li><a href="pages-about-me-v1.html">About Version 1</a></li>
-                    <li><a href="pages-about-me-v2.html">About Version 2</a></li>
                     <li><a href="pages-contact-me-v1.html">Contact Version 1</a></li>
-                    <li><a href="pages-contact-me-v2.html">Contact Version 2</a></li>
                     <li><a href="pages-error-404.html">Error Page 404</a></li>
                     <li><a href="pages-coming-soon.html">Coming Soon Page</a></li>
                   </ul>
@@ -162,12 +145,9 @@
                     <li><a href="single-video-post.html">Video Post</a></li>
                     <li><a href="single-gallery-post.html">Gallery Post</a></li>
                     <li><a href="single-quote-post.html">Quote Post</a></li>
-                    <li><a href="single-post-left-sidebar.html">Left Sidebar Post</a></li>
-                    <li><a href="single-post-right-sidebar.html">Right Sidebar Post</a></li>
-                    <li><a href="single-post-without-sidebar.html">Without Sidebar Post</a></li>
                   </ul>
                 </li>
-                <li><a href="pages-contact-me-v2.html">Contact</a></li>
+                <li><a href="pages-contact-me-v1.html">Contact</a></li>
               </ul>    
           </div>
           <div class="header-widgets">
@@ -211,11 +191,8 @@
                   <div class="col-lg-8">
                     <p> Welcome all, my name is Cade Keenan. Currently, I am a 22 year old senior BAIS student at The University of Iowa in their internationally award winning Business Analytics and Information Systems program. Formerly a Division 1 Athlete at Butler University, I enjoy all things sports, music, science and nature. In my free time I enjoy spending time with family and friends, fishing, concert-going, and cooking.  </p>
                     <ul class="social-icons">
-                      <li><a href="#"><i class="fa fa-facebook"></i></a></li>
                       <li><a href="#"><i class="fa fa-twitter"></i></a></li>
                       <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
-                      <li><a href="#"><i class="fa fa-rss"></i></a></li>
-                      <li><a href="#"><i class="fa fa-behance"></i></a></li>
                     </ul>
                   </div>
                 </div>
@@ -233,7 +210,7 @@
             <div class="instagram-account">
               <div class="widget-content">
                 <div class="widget-header">
-                  <h4><a href="#">@shareenBlog</a></h4>
+                  <h4><a href="#">@CJKDataTweets</a></h4>
                 </div>
                 <div class="row">
                   <div class="col-lg-3">
@@ -241,20 +218,7 @@
                       <img src="http://placehold.it/255x220" alt="">
                     </div>
                   </div>
-                  <div class="col-lg-3">
-                    <div class="instagram-item">
-                      <img src="http://placehold.it/255x220" alt="">
-                    </div>
-                  </div>
-                  <div class="col-lg-3">
-                    <div class="instagram-item">
-                      <img src="http://placehold.it/255x220" alt="">
-                    </div>
-                  </div>
-                  <div class="col-lg-3">
-                    <div class="instagram-item">
-                      <img src="http://placehold.it/255x220" alt="">
-                    </div>
+                  
                   </div>
                 </div>
               </div>
@@ -269,16 +233,13 @@
         <div class="row">
           <div class="col-lg-12">
             <ul class="footer-social-icons">
-              <li><a href="#"><i class="fa fa-facebook"></i> Facebook</a></li>
               <li><a href="#"><i class="fa fa-twitter"></i> Twitter</a></li>
-              <li><a href="#"><i class="fa fa-behance"></i> Behance</a></li>
               <li><a href="#"><i class="fa fa-linkedin"></i> Linkedin</a></li>
-              <li><a href="#"><i class="fa fa-dribbble"></i> Dribbble</a></li>
             </ul>
           </div>
           <div class="col-lg-12">
             <div class="copyright-text">
-              <p>all rights reserved. <a href="#">robert imeri</a> 2020.</p>
+              <p>all rights reserved. <a href="#">Cade Keenan</a> 2022.</p>
             </div>
           </div>
         </div>
