--- a/02 - HTML Files/pages-contact-me-v1.html
+++ b/02 - HTML Files/pages-contact-me-v1.html
@@ -118,7 +118,7 @@
       <div class="container expanded">
         <div class="header-wrap">
           <div class="header-logo">
-            <a href="index.html"><img src="images/logo.png" alt=""></a>
+            <a href="index.html"><img src="images/CJKLogo.png" alt=""></a>
           </div>
           <div class="header-nav">
               <ul class="main-menu">
@@ -126,45 +126,23 @@
                   <ul class="sub-menu">
                     <li><a href="index.html">Standard Posts</a></li>
                     <li><a href="home-recent.html">Recent Posts</a></li>
-                    <li><a href="home-masonry.html">Masonry Posts</a></li>
-                    <li><a href="home-list.html">List Posts</a></li>
-                    <li><a href="home-full-width.html">Full Width Posts</a></li>
-                    <li><a href="home-without-sidebar.html">Without Sidebar</a></li>
                   </ul>
                 </li>
-                <li class="menu-item-has-children"><a href="#">Sliders</a>
-                  <ul class="sub-menu">
-                    <li><a href="slider-boxed.html">Boxed Slider</a></li>
-                    <li><a href="slider-full-width.html">Full Width Slider</a></li>
-                    <li><a href="slider-medium.html">Two Big Posts</a></li>
-                    <li><a href="slider-small.html">Three Big Posts</a></li>
-                    <li><a href="slider-infinity.html">Infinity Scroll</a></li>
-                  </ul>
-                </li>
+              
                 <li><a href="pages-about-me-v1.html">About</a></li>
                 <li class="menu-item-has-children"><a href="#">Pages</a>
                   <ul class="sub-menu">
-                    <li><a href="pages-left-sidebar.html">Left Sidebar</a></li>
-                    <li><a href="pages-right-sidebar.html">Right Sidebar</a></li>
-                    <li><a href="pages-without-sidebar.html">Without Sidebar</a></li>
                     <li><a href="pages-about-me-v1.html">About Version 1</a></li>
-                    <li><a href="pages-about-me-v2.html">About Version 2</a></li>
                     <li><a href="pages-contact-me-v1.html">Contact Version 1</a></li>
-                    <li><a href="pages-contact-me-v2.html">Contact Version 2</a></li>
                     <li><a href="pages-error-404.html">Error Page 404</a></li>
                     <li><a href="pages-coming-soon.html">Coming Soon Page</a></li>
                   </ul>
                 </li>
                 <li class="menu-item-has-children"><a href="#">Posts</a>
                   <ul class="sub-menu">
-                    <li><a href="single-standard-post.html">Standard Post</a></li>
-                    <li><a href="single-audio-post.html">Audio Post</a></li>
                     <li><a href="single-video-post.html">Video Post</a></li>
                     <li><a href="single-gallery-post.html">Gallery Post</a></li>
                     <li><a href="single-quote-post.html">Quote Post</a></li>
-                    <li><a href="single-post-left-sidebar.html">Left Sidebar Post</a></li>
-                    <li><a href="single-post-right-sidebar.html">Right Sidebar Post</a></li>
-                    <li><a href="single-post-without-sidebar.html">Without Sidebar Post</a></li>
                   </ul>
                 </li>
                 <li class="active"><a href="pages-contact-me-v2.html">Contact</a></li>
@@ -249,7 +227,7 @@
             <div class="instagram-account">
               <div class="widget-content">
                 <div class="widget-header">
-                  <h4><a href="#">@shareenBlog</a></h4>
+                  <h4><a href="#">@CJKDataTweets</a></h4>
                 </div>
                 <div class="row">
                   <div class="col-lg-3">
@@ -258,19 +236,6 @@
                     </div>
                   </div>
                   <div class="col-lg-3">
-                    <div class="instagram-item">
-                      <img src="http://placehold.it/255x220" alt="">
-                    </div>
-                  </div>
-                  <div class="col-lg-3">
-                    <div class="instagram-item">
-                      <img src="http://placehold.it/255x220" alt="">
-                    </div>
-                  </div>
-                  <div class="col-lg-3">
-                    <div class="instagram-item">
-                      <img src="http://placehold.it/255x220" alt="">
-                    </div>
                   </div>
                 </div>
               </div>
@@ -285,16 +250,13 @@
         <div class="row">
           <div class="col-lg-12">
             <ul class="footer-social-icons">
-              <li><a href="#"><i class="fa fa-facebook"></i> Facebook</a></li>
               <li><a href="#"><i class="fa fa-twitter"></i> Twitter</a></li>
-              <li><a href="#"><i class="fa fa-behance"></i> Behance</a></li>
               <li><a href="#"><i class="fa fa-linkedin"></i> Linkedin</a></li>
-              <li><a href="#"><i class="fa fa-dribbble"></i> Dribbble</a></li>
             </ul>
           </div>
           <div class="col-lg-12">
             <div class="copyright-text">
-              <p>all rights reserved. <a href="#">robert imeri</a> 2020.</p>
+              <p>all rights reserved. <a href="#">Cade Keenan </a> 2022.</p>
             </div>
           </div>
         </div>
