--- a/02 - HTML Files/single-gallery-post.html
+++ b/02 - HTML Files/single-gallery-post.html
@@ -150,12 +150,12 @@
         </form>
     </div>
   
-    <img src="images/CKeenanFam2.jpg" alt="Family and I, Yosemite Natl Park">
+    <img src="images/CKeenanFam2.jpg" alt="Family and I, Yosemite Natl Park" style="width:600px;height:600px;">
 
-    <img src="images/CKeenanFam1.jpg" alt="Family and I, Blue Sky Basin">
-    <img src="images/CKeenanFriends2.jpg" alt="The Gang">
-    <img src="images/Football1.jpg" alt="Balling">
-
+    <img src="images/CKeenanFam1.jpg" alt="Family and I, Blue Sky Basin" style="width:600px;height:600px;">
+    <img src="images/Selfie1.jpg" alt="Balling" style="width:500px;height:600px;">
+    <img src="images/Football1.jpg" alt="Balling" style="width:750px;height:600px;">
+    <img src="images/CKeenanFriends4.JPG" alt="Balling" style="width:750px;height:600px;">
     
 
 
