--- a/02 - HTML Files/index.html
+++ b/02 - HTML Files/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Shareen - Personal Blog Template</title>
+    <title> CJK </title>
 
     <!-- Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700,800&display=swap" rel="stylesheet">
@@ -43,17 +43,12 @@
           
           <li class="has-sub"><a href="#">Posts <i class="sub-icon fa fa-angle-down"></i></a>
             <ul class="sub-menu">
-              <li><a href="single-standard-post.html">Standard Post</a></li>
-              <li><a href="single-audio-post.html">Audio Post</a></li>
               <li><a href="single-video-post.html">Video Post</a></li>
               <li><a href="single-gallery-post.html">Gallery Post</a></li>
-              <li><a href="single-quote-post.html">Quote Post</a></li>
-              <li><a href="single-post-left-sidebar.html">Left Sidebar Post</a></li>
-              <li><a href="single-post-right-sidebar.html">Right Sidebar Post</a></li>
-              <li><a href="single-post-without-sidebar.html">Without Sidebar Post</a></li>
+              <li><a href="single-quote-post.html">Media Post</a></li>
             </ul>
           </li>
-          <li><a href="pages-contact-me-v2.html">Contact Us</a></li>
+          <li><a href="pages-contact-me-v1.html">Contact Us</a></li>
         </ul>
       </div>
     </div>
@@ -117,10 +112,10 @@
                   <ul class="sub-menu">
                     <li><a href="single-video-post.html">Video Post</a></li>
                     <li><a href="single-gallery-post.html">Gallery Post</a></li>
-                    <li><a href="single-quote-post.html">Quote Post</a></li>
+                    <li><a href="single-quote-post.html">Media Post</a></li>
                   </ul>
                 </li>
-                <li><a href="pages-contact-me-v2.html">Contact</a></li>
+                <li><a href="pages-contact-me-v1.html">Contact</a></li>
               </ul>    
           </div>
           <div class="header-widgets">
