--- a/02 - HTML Files/single-quote-post.html
+++ b/02 - HTML Files/single-quote-post.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Shareen - Personal Blog Template</title>
+    <title>CJK</title>
 
     <!-- Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700,800&display=swap" rel="stylesheet">
@@ -37,48 +37,25 @@
             <ul class="sub-menu">
               <li><a href="index.html">Standard Posts</a></li>
               <li><a href="home-recent.html">Recent Posts</a></li>
-              <li><a href="home-masonry.html">Masonry Posts</a></li>
-              <li><a href="home-list.html">List Posts</a></li>
-              <li><a href="home-full-width.html">Full Width Posts</a></li>
-              <li><a href="home-without-sidebar.html">Without Sidebar</a></li>
-            </ul>
-          </li>
-          <li class="has-sub"><a href="#">Sliders <i class="sub-icon fa fa-angle-down"></i></a>
-            <ul class="sub-menu">
-              <li><a href="slider-boxed.html">Boxed Slider</a></li>
-              <li><a href="slider-full-width.html">Full Width Slider</a></li>
-              <li><a href="slider-medium.html">Two Big Posts</a></li>
-              <li><a href="slider-small.html">Three Big Posts</a></li>
-              <li><a href="slider-infinity.html">Infinity Scroll</a></li>
             </ul>
           </li>
           <li><a href="pages-about-me-v1.html">About</a></li>
           <li class="has-sub"><a href="#">Pages <i class="sub-icon fa fa-angle-down"></i></a>
             <ul class="sub-menu">
-              <li><a href="pages-left-sidebar.html">Left Sidebar</a></li>
-              <li><a href="pages-right-sidebar.html">Right Sidebar</a></li>
-              <li><a href="pages-without-sidebar.html">Without Sidebar</a></li>
               <li><a href="pages-about-me-v1.html">About Version 1</a></li>
-              <li><a href="pages-about-me-v2.html">About Version 2</a></li>
               <li><a href="pages-contact-me-v1.html">Contact Version 1</a></li>
-              <li><a href="pages-contact-me-v2.html">Contact Version 2</a></li>
               <li><a href="pages-error-404.html">Error Page 404</a></li>
               <li><a href="pages-coming-soon.html">Coming Soon Page</a></li>
             </ul>
           </li>
           <li class="has-sub"><a href="#">Posts <i class="sub-icon fa fa-angle-down"></i></a>
             <ul class="sub-menu">
-              <li><a href="single-standard-post.html">Standard Post</a></li>
-              <li><a href="single-audio-post.html">Audio Post</a></li>
               <li><a href="single-video-post.html">Video Post</a></li>
               <li><a href="single-gallery-post.html">Gallery Post</a></li>
-              <li><a href="single-quote-post.html">Quote Post</a></li>
-              <li><a href="single-post-left-sidebar.html">Left Sidebar Post</a></li>
-              <li><a href="single-post-right-sidebar.html">Right Sidebar Post</a></li>
-              <li><a href="single-post-without-sidebar.html">Without Sidebar Post</a></li>
+              <li><a href="single-quote-post.html">Media Post</a></li>
             </ul>
           </li>
-          <li><a href="pages-contact-me-v2.html">Contact Us</a></li>
+          <li><a href="pages-contact-me-v1.html">Contact Us</a></li>
         </ul>
       </div>
     </div>
@@ -89,15 +66,13 @@
         <div class="row">
           <div class="col-lg-4 align-self-center">
             <ul class="social-icons">
-              <li><a href="#"><i class="fa fa-facebook"></i></a></li>
               <li><a href="#"><i class="fa fa-twitter"></i></a></li>
               <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
-              <li><a href="#"><i class="fa fa-behance"></i></a></li>
             </ul>
           </div>
           <div class="col-lg-4 align-self-center">
             <div class="logo">
-              <a href="index.html"><img src="images/logo.png" alt=""></a>
+              <a href="index.html"><img src="images/CJKLogo.png" alt=""></a>
             </div>
           </div>
           <div class="col-lg-4 align-self-center">
@@ -118,7 +93,7 @@
       <div class="container expanded">
         <div class="header-wrap">
           <div class="header-logo">
-            <a href="index.html"><img src="images/logo.png" alt=""></a>
+            <a href="index.html"><img src="images/CJKLogo.png" alt=""></a>
           </div>
           <div class="header-nav">
               <ul class="main-menu">
@@ -126,48 +101,25 @@
                   <ul class="sub-menu">
                     <li><a href="index.html">Standard Posts</a></li>
                     <li><a href="home-recent.html">Recent Posts</a></li>
-                    <li><a href="home-masonry.html">Masonry Posts</a></li>
-                    <li><a href="home-list.html">List Posts</a></li>
-                    <li><a href="home-full-width.html">Full Width Posts</a></li>
-                    <li><a href="home-without-sidebar.html">Without Sidebar</a></li>
-                  </ul>
-                </li>
-                <li class="menu-item-has-children"><a href="#">Sliders</a>
-                  <ul class="sub-menu">
-                    <li><a href="slider-boxed.html">Boxed Slider</a></li>
-                    <li><a href="slider-full-width.html">Full Width Slider</a></li>
-                    <li><a href="slider-medium.html">Two Big Posts</a></li>
-                    <li><a href="slider-small.html">Three Big Posts</a></li>
-                    <li><a href="slider-infinity.html">Infinity Scroll</a></li>
                   </ul>
                 </li>
                 <li><a href="pages-about-me-v1.html">About</a></li>
                 <li class="menu-item-has-children"><a href="#">Pages</a>
                   <ul class="sub-menu">
-                    <li><a href="pages-left-sidebar.html">Left Sidebar</a></li>
-                    <li><a href="pages-right-sidebar.html">Right Sidebar</a></li>
-                    <li><a href="pages-without-sidebar.html">Without Sidebar</a></li>
                     <li><a href="pages-about-me-v1.html">About Version 1</a></li>
-                    <li><a href="pages-about-me-v2.html">About Version 2</a></li>
                     <li><a href="pages-contact-me-v1.html">Contact Version 1</a></li>
-                    <li><a href="pages-contact-me-v2.html">Contact Version 2</a></li>
                     <li><a href="pages-error-404.html">Error Page 404</a></li>
                     <li><a href="pages-coming-soon.html">Coming Soon Page</a></li>
                   </ul>
                 </li>
                 <li class="menu-item-has-children active"><a href="#">Posts</a>
                   <ul class="sub-menu">
-                    <li><a href="single-standard-post.html">Standard Post</a></li>
-                    <li><a href="single-audio-post.html">Audio Post</a></li>
                     <li><a href="single-video-post.html">Video Post</a></li>
                     <li><a href="single-gallery-post.html">Gallery Post</a></li>
                     <li><a href="single-quote-post.html">Quote Post</a></li>
-                    <li><a href="single-post-left-sidebar.html">Left Sidebar Post</a></li>
-                    <li><a href="single-post-right-sidebar.html">Right Sidebar Post</a></li>
-                    <li><a href="single-post-without-sidebar.html">Without Sidebar Post</a></li>
                   </ul>
                 </li>
-                <li><a href="pages-contact-me-v2.html">Contact</a></li>
+                <li><a href="pages-contact-me-v1.html">Contact</a></li>
               </ul>    
           </div>
           <div class="header-widgets">
@@ -503,7 +455,7 @@
             <div class="instagram-account">
               <div class="widget-content">
                 <div class="widget-header">
-                  <h4><a href="#">@shareenBlog</a></h4>
+                  <h4><a href="#">@CJKDataTweets</a></h4>
                 </div>
                 <div class="row">
                   <div class="col-lg-3">
@@ -539,16 +491,13 @@
         <div class="row">
           <div class="col-lg-12">
             <ul class="footer-social-icons">
-              <li><a href="#"><i class="fa fa-facebook"></i> Facebook</a></li>
               <li><a href="#"><i class="fa fa-twitter"></i> Twitter</a></li>
-              <li><a href="#"><i class="fa fa-behance"></i> Behance</a></li>
               <li><a href="#"><i class="fa fa-linkedin"></i> Linkedin</a></li>
-              <li><a href="#"><i class="fa fa-dribbble"></i> Dribbble</a></li>
             </ul>
           </div>
           <div class="col-lg-12">
             <div class="copyright-text">
-              <p>all rights reserved. <a href="#">robert imeri</a> 2020.</p>
+              <p>all rights reserved. <a href="#">Cade Keenan</a> 2022.</p>
             </div>
           </div>
         </div>
