--- a/01 - Documentation/index.html
+++ b/01 - Documentation/index.html
@@ -6,7 +6,7 @@
 <!--[if IE 8]> <html class="no-js lt-ie9" lang="en"> <![endif]-->
 <!--[if gt IE 8]><!--> <html class="no-js" lang="en"> <!--<![endif]-->
   <head>
-    <title>Shareen - Template Documentation</title>
+    <title>CJK</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Documentation for template by Esmet">
     <meta name="author" content="Esmet">
