--- a/02 - HTML Files/pages-about-me-v1.html
+++ b/02 - HTML Files/pages-about-me-v1.html
@@ -66,8 +66,8 @@
         <div class="row">
           <div class="col-lg-4 align-self-center">
             <ul class="social-icons">
-              <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-              <li><a href="#"><i class="fa fa-linkedin"></i></a></li>            </ul>
+              <li><a href="https://twitter.com/CJKData"><i class="fa fa-twitter"></i></a></li>
+              <li><a href="https://www.linkedin.com/in/cade-keenan/"><i class="fa fa-linkedin"></i></a></li>            </ul>
           </div>
           <div class="col-lg-4 align-self-center">
             <div class="logo">
@@ -164,7 +164,7 @@
                     <p> Welcome all, my name is Cade Keenan. Currently, I am a 22 year old senior BAIS student at The University of Iowa in their internationally award winning Business Analytics and Information Systems program. Formerly a Division 1 Athlete at Butler University, I enjoy all things sports, music, science and nature. In my free time I enjoy spending time with family and friends, fishing, concert-going, and cooking.  </p>
                     <ul class="social-icons">
                       <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-                      <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
+                      <li><a href="https://www.linkedin.com/in/cade-keenan/"><i class="fa fa-linkedin"></i></a></li>
                     </ul>
                   </div>
                 </div>
@@ -205,8 +205,8 @@
         <div class="row">
           <div class="col-lg-12">
             <ul class="footer-social-icons">
-              <li><a href="#"><i class="fa fa-twitter"></i> Twitter</a></li>
-              <li><a href="#"><i class="fa fa-linkedin"></i> Linkedin</a></li>
+              <li><a href="https://twitter.com/CJKData"><i class="fa fa-twitter"></i> Twitter</a></li>
+              <li><a href="https://www.linkedin.com/in/cade-keenan/"><i class="fa fa-linkedin"></i> Linkedin</a></li>
             </ul>
           </div>
           <div class="col-lg-12">
