--- a/02 - HTML Files/index.html
+++ b/02 - HTML Files/index.html
@@ -58,8 +58,8 @@
         <div class="row">
           <div class="col-lg-4 align-self-center">
             <ul class="social-icons">
-              <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-              <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
+              <li><a href="https://twitter.com/CJKData"><i class="fa fa-twitter"></i></a></li>
+              <li><a href="https://www.linkedin.com/in/cade-keenan/"><i class="fa fa-linkedin"></i></a></li>
             </ul>
           </div>
           <div class="col-lg-4 align-self-center">
@@ -247,7 +247,7 @@
                         <div class="col-lg-6 col-md-6">
                           <ul class="share-post">
                             <li><i class="fa fa-share-alt"></i></li>
-                            <li><a href="#">LinkedIn</a>,</li>
+                            <li><a href="https://www.linkedin.com/in/cade-keenan/">LinkedIn</a>,</li>
                             <li><a href="#">Twitter</a></li>
                           </ul>
                         </div>
@@ -419,8 +419,8 @@
         <div class="row">
           <div class="col-lg-12">
             <ul class="footer-social-icons">
-              <li><a href="#"><i class="fa fa-twitter"></i> Twitter</a></li>
-              <li><a href="#"><i class="fa fa-linkedin"></i> Linkedin</a></li>
+              <li><a href="https://twitter.com/CJKData"><i class="fa fa-twitter"></i> Twitter</a></li>
+              <li><a href="https://www.linkedin.com/in/cade-keenan/"><i class="fa fa-linkedin"></i> Linkedin</a></li>
             </ul>
           </div>
           <div class="col-lg-12">
