--- a/02 - HTML Files/pages-coming-soon.html
+++ b/02 - HTML Files/pages-coming-soon.html
@@ -89,10 +89,8 @@
         <div class="row">
           <div class="col-lg-4 align-self-center">
             <ul class="social-icons">
-              <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-              <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-              <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
-              <li><a href="#"><i class="fa fa-behance"></i></a></li>
+              <li><a href="https://twitter.com/CJKData"><i class="fa fa-twitter"></i></a></li>
+              <li><a href="https://www.linkedin.com/in/cade-keenan/"><i class="fa fa-linkedin"></i></a></li>
             </ul>
           </div>
           <div class="col-lg-4 align-self-center">
@@ -126,46 +124,20 @@
                   <ul class="sub-menu">
                     <li><a href="index.html">Standard Posts</a></li>
                     <li><a href="home-recent.html">Recent Posts</a></li>
-                    <li><a href="home-masonry.html">Masonry Posts</a></li>
-                    <li><a href="home-list.html">List Posts</a></li>
-                    <li><a href="home-full-width.html">Full Width Posts</a></li>
-                    <li><a href="home-without-sidebar.html">Without Sidebar</a></li>
-                  </ul>
-                </li>
-                <li class="menu-item-has-children"><a href="#">Sliders</a>
-                  <ul class="sub-menu">
-                    <li><a href="slider-boxed.html">Boxed Slider</a></li>
-                    <li><a href="slider-full-width.html">Full Width Slider</a></li>
-                    <li><a href="slider-medium.html">Two Big Posts</a></li>
-                    <li><a href="slider-small.html">Three Big Posts</a></li>
-                    <li><a href="slider-infinity.html">Infinity Scroll</a></li>
                   </ul>
                 </li>
                 <li><a href="pages-about-me-v1.html">About</a></li>
                 <li class="menu-item-has-children active"><a href="#">Pages</a>
                   <ul class="sub-menu">
-                    <li><a href="pages-left-sidebar.html">Left Sidebar</a></li>
-                    <li><a href="pages-right-sidebar.html">Right Sidebar</a></li>
-                    <li><a href="pages-without-sidebar.html">Without Sidebar</a></li>
                     <li><a href="pages-about-me-v1.html">About Version 1</a></li>
-                    <li><a href="pages-about-me-v2.html">About Version 2</a></li>
                     <li><a href="pages-contact-me-v1.html">Contact Version 1</a></li>
-                    <li><a href="pages-contact-me-v2.html">Contact Version 2</a></li>
-                    <li><a href="pages-error-404.html">Error Page 404</a></li>
-                    <li><a href="pages-coming-soon.html">Coming Soon Page</a></li>
+
                   </ul>
                 </li>
                 <li class="menu-item-has-children"><a href="#">Posts</a>
                   <ul class="sub-menu">
-                    <li><a href="single-standard-post.html">Standard Post</a></li>
-                    <li><a href="single-audio-post.html">Audio Post</a></li>
                     <li><a href="single-video-post.html">Video Post</a></li>
                     <li><a href="single-gallery-post.html">Gallery Post</a></li>
-                    <li><a href="single-quote-post.html">Quote Post</a></li>
-                    <li><a href="single-post-left-sidebar.html">Left Sidebar Post</a></li>
-                    <li><a href="single-post-right-sidebar.html">Right Sidebar Post</a></li>
-                    <li><a href="single-post-without-sidebar.html">Without Sidebar Post</a></li>
-                  </ul>
                 </li>
                 <li><a href="pages-contact-me-v2.html">Contact</a></li>
               </ul>    
@@ -200,7 +172,7 @@
         <div class="row">
           <div class="col-lg-10 offset-lg-1">
             <div class="main-content">
-              <h6>We are coming soon!</h6>
+              <h6>I'm working on it, man</h6>
               <div class="counter">
                 <div class="days">
                   <div class="value">00</div>
@@ -248,59 +220,20 @@
       </div>
     </section>
     
-    <div class="instagram-footer">
-      <div class="container">
-        <div class="row">
-          <div class="col-lg-12">
-            <div class="instagram-account">
-              <div class="widget-content">
-                <div class="widget-header">
-                  <h4><a href="#">@shareenBlog</a></h4>
-                </div>
-                <div class="row">
-                  <div class="col-lg-3">
-                    <div class="instagram-item">
-                      <img src="http://placehold.it/255x220" alt="">
-                    </div>
-                  </div>
-                  <div class="col-lg-3">
-                    <div class="instagram-item">
-                      <img src="http://placehold.it/255x220" alt="">
-                    </div>
-                  </div>
-                  <div class="col-lg-3">
-                    <div class="instagram-item">
-                      <img src="http://placehold.it/255x220" alt="">
-                    </div>
-                  </div>
-                  <div class="col-lg-3">
-                    <div class="instagram-item">
-                      <img src="http://placehold.it/255x220" alt="">
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
 
     <footer>
       <div class="container">
         <div class="row">
           <div class="col-lg-12">
             <ul class="footer-social-icons">
-              <li><a href="#"><i class="fa fa-facebook"></i> Facebook</a></li>
-              <li><a href="#"><i class="fa fa-twitter"></i> Twitter</a></li>
-              <li><a href="#"><i class="fa fa-behance"></i> Behance</a></li>
-              <li><a href="#"><i class="fa fa-linkedin"></i> Linkedin</a></li>
-              <li><a href="#"><i class="fa fa-dribbble"></i> Dribbble</a></li>
+              <li><a href="https://twitter.com/CJKData"><i class="fa fa-twitter"></i> Twitter</a></li>
+              <li><a href="https://www.linkedin.com/in/cade-keenan/"><i class="fa fa-linkedin"></i> Linkedin</a></li>
+
             </ul>
           </div>
           <div class="col-lg-12">
             <div class="copyright-text">
-              <p>all rights reserved. <a href="#">robert imeri</a> 2020.</p>
+              <p>all rights reserved. <a href="#">Cade Keenan</a> 2022.</p>
             </div>
           </div>
         </div>
