--- a/02 - HTML Files/pages-contact-me-v1.html
+++ b/02 - HTML Files/pages-contact-me-v1.html
@@ -66,8 +66,8 @@
         <div class="row">
           <div class="col-lg-4 align-self-center">
             <ul class="social-icons">
-              <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-              <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
+              <li><a href="https://twitter.com/CJKData"><i class="fa fa-twitter"></i></a></li>
+              <li><a href="https://www.linkedin.com/in/cade-keenan/"><i class="fa fa-linkedin"></i></a></li>
             </ul>
           </div>
           <div class="col-lg-4 align-self-center">
@@ -225,8 +225,8 @@
         <div class="row">
           <div class="col-lg-12">
             <ul class="footer-social-icons">
-              <li><a href="#"><i class="fa fa-twitter"></i> Twitter</a></li>
-              <li><a href="#"><i class="fa fa-linkedin"></i> Linkedin</a></li>
+              <li><a href="https://twitter.com/CJKData"><i class="fa fa-twitter"></i> Twitter</a></li>
+              <li><a href="https://www.linkedin.com/in/cade-keenan/"><i class="fa fa-linkedin"></i> Linkedin</a></li>
             </ul>
           </div>
           <div class="col-lg-12">
