--- a/02 - HTML Files/pages-error-404.html
+++ b/02 - HTML Files/pages-error-404.html
@@ -89,10 +89,8 @@
         <div class="row">
           <div class="col-lg-4 align-self-center">
             <ul class="social-icons">
-              <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-              <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-              <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
-              <li><a href="#"><i class="fa fa-behance"></i></a></li>
+              <li><a href="https://twitter.com/CJKData"><i class="fa fa-twitter"></i></a></li>
+              <li><a href="https://www.linkedin.com/in/cade-keenan/"><i class="fa fa-linkedin"></i></a></li>
             </ul>
           </div>
           <div class="col-lg-4 align-self-center">
@@ -238,7 +236,7 @@
             <div class="instagram-account">
               <div class="widget-content">
                 <div class="widget-header">
-                  <h4><a href="#">@shareenBlog</a></h4>
+                  <h4><a href="#">@CJKBlog</a></h4>
                 </div>
                 <div class="row">
                   <div class="col-lg-3">
@@ -274,11 +272,8 @@
         <div class="row">
           <div class="col-lg-12">
             <ul class="footer-social-icons">
-              <li><a href="#"><i class="fa fa-facebook"></i> Facebook</a></li>
-              <li><a href="#"><i class="fa fa-twitter"></i> Twitter</a></li>
-              <li><a href="#"><i class="fa fa-behance"></i> Behance</a></li>
-              <li><a href="#"><i class="fa fa-linkedin"></i> Linkedin</a></li>
-              <li><a href="#"><i class="fa fa-dribbble"></i> Dribbble</a></li>
+              <li><a href="https://twitter.com/CJKData"><i class="fa fa-twitter"></i> Twitter</a></li>
+              <li><a href="https://www.linkedin.com/in/cade-keenan/"><i class="fa fa-linkedin"></i> Linkedin</a></li>
             </ul>
           </div>
           <div class="col-lg-12">
