--- a/02 - HTML Files/single-gallery-post.html
+++ b/02 - HTML Files/single-gallery-post.html
@@ -68,8 +68,8 @@
         <div class="row">
           <div class="col-lg-4 align-self-center">
             <ul class="social-icons">
-              <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-              <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
+              <li><a href="https://twitter.com/CJKData"><i class="fa fa-twitter"></i></a></li>
+              <li><a href="https://www.linkedin.com/in/cade-keenan/"><i class="fa fa-linkedin"></i></a></li>
             </ul>
           </div>
           <div class="col-lg-4 align-self-center">
@@ -205,8 +205,8 @@
         <div class="row">
           <div class="col-lg-12">
             <ul class="footer-social-icons">
-              <li><a href="#"><i class="fa fa-twitter"></i> Twitter</a></li>
-              <li><a href="#"><i class="fa fa-linkedin"></i> Linkedin</a></li>
+              <li><a href="https://twitter.com/CJKData"><i class="fa fa-twitter"></i> Twitter</a></li>
+              <li><a href="https://www.linkedin.com/in/cade-keenan/"><i class="fa fa-linkedin"></i> Linkedin</a></li>
             </ul>
           </div>
           <div class="col-lg-12">
