--- a/02 - HTML Files/single-quote-post.html
+++ b/02 - HTML Files/single-quote-post.html
@@ -67,7 +67,7 @@
           <div class="col-lg-4 align-self-center">
             <ul class="social-icons">
               <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-              <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
+              <li><a href="https://www.linkedin.com/in/cade-keenan/"><i class="fa fa-linkedin"></i></a></li>
             </ul>
           </div>
           <div class="col-lg-4 align-self-center">
@@ -308,11 +308,8 @@
                       <p>Franzen tumeric sriracha and quinoa goard next level cold-pressed kinfolk.</p>
                       <h6>Shareen Robertson</h6>
                       <ul class="social-icons">
-                        <li><a href="#"><i class="fa fa-facebook"></i></a></li>
                         <li><a href="#"><i class="fa fa-twitter"></i></a></li>
                         <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
-                        <li><a href="#"><i class="fa fa-rss"></i></a></li>
-                        <li><a href="#"><i class="fa fa-behance"></i></a></li>
                       </ul>
                     </div>
                   </div>
