--- a/pages-about-me-v1.html
+++ b/pages-about-me-v1.html
@@ -174,6 +174,39 @@
         </div>
       </div>
     </section>
+
+    <section class="large-gap about-me about-version-one">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-12">
+            <div class="widget-sidebar about-me">
+              <div class="widget-header">
+                <h4> What I've Been Into </h4>
+              </div>
+              <div class="widget-content">
+                <div class="row">
+                  <div class="col-lg-4">
+                    <img src="http://placehold.it/370x400" alt="">
+                  </div>
+                  <div class="col-lg-8">
+                    <script src="https://apps.elfsight.com/p/platform.js" defer></script>
+                    <script src="https://apps.elfsight.com/p/platform.js" defer></script>
+                    <div class="elfsight-app-3ee39fc1-1420-4784-9afb-be8d40a46e34"></div>
+                    <script src="https://apps.elfsight.com/p/platform.js" defer></script>
+                    <div class="elfsight-app-733b5dec-c6d3-4d63-97f2-b3c4b941cf5a">
+                    </div>
+                    <ul class="social-icons">
+                      <li><a href="#"><i class="fa fa-twitter"></i></a></li>
+                      <li><a href="https://www.linkedin.com/in/cade-keenan/"><i class="fa fa-linkedin"></i></a></li>
+                    </ul>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
     
     <div class="instagram-footer">
       <div class="container">
@@ -187,7 +220,7 @@
                 <div class="row">
                   <div class="col-lg-3">
                     <div class="instagram-item">
-                      <img src="http://placehold.it/255x220" alt="">
+                      <img src= https://twitter.com/CJKData alt="">
                     </div>
                   </div>
                   
